Update API endpoint in index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 <script>
     // --- YOUR PROVEN WORKING SCRIPT ---
-    const API = "https://m2htempmail.m2hgamerz.workers.dev";
+    const API = "https://tempmail-do.m2hgamerz.workers.dev";
     let email = "", expireAt = 0, pollTimer = null;
 
     function showToast(msg) {
